Wed Aug 10 18:01:03 UTC 2011  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/TransportHeader.inl:
        * dds/DCPS/transport/framework/TransportHeader.cpp:
        * dds/DCPS/transport/framework/TransportImpl.h:
        * dds/DCPS/transport/multicast/MulticastTransport.h:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
        * dds/DCPS/transport/tcp/TcpTransport.h:
        * dds/DCPS/transport/tcp/TcpTransport.cpp:
        * dds/DCPS/transport/udp/UdpDataLink.cpp:
        * dds/DCPS/transport/udp/UdpTransport.h:
        * dds/DCPS/transport/udp/UdpTransport.cpp:
        * performance-tests/DCPS/dummyTCP/DummyTcpTransport.h:
        * performance-tests/DCPS/dummyTCP/DummyTcpTransport.cpp:

          Changes to allow "handshaking" of UDP connections to
          support fully_associated() and multiple transports
          on the same DataReader.

Wed Aug 10 14:35:02 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastSession.cpp:
        * dds/DCPS/transport/multicast/ReliableSession.cpp:
        * java/dds/OpenDDS_DCPS_jni.cpp:
        * tests/DCPS/FooTest3_0/PubDriver.cpp:

          Fixed warnings and errors.

Tue Aug  9 22:03:14 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastTransport.h:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:

          Use a separate method for start_session() instead of starting
          the session inside make_datalink().

Tue Aug  9 20:41:55 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastTransport.h:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:

          Only return a datalink from find_datalink() if both the datalink
          and the session already exist.  If the session doesn't exist yet,
          need to fall through to connect_datalink() or accept_datalink().
